# PersonalScripts2

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml
src/: ProcessRippedCDs.py
src/ProcessRippedCDs/: ProcessRippedCDs.py
